2006-03-23  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONRestoreMode),
	(RADEONInitCrtcRegisters), (RADEONInitCrtc2Registers):
	Call RADEONRestoreCommonRegisters() before
	RADEONRestoreCrtc2Registers() instead of after. I can't find any good
	reason why we did it backward until now and it definitely causes
	problems as the workaround for VT switch in
	RADEONRestoreCommonRegisters() will break output to the secondary head
	in various situations. Also does an unrelated minor update to a
	comment.

2006-03-18  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONRestoreMemMapRegisters),
	(RADEONRestoreCrtcRegisters), (RADEONRestoreCrtc2Registers):
	* src/radeon_reg.h:
	Clear the offsets when updating the memory map instead of when
	enabling the CRTCs and try to make that code more reliable. Doesn't
	disable the CRTCs beforehand.

2006-03-18  Roland Scheidegger  <rscheidegger_lists@hispeed.ch>
	* src/radeon_dri.c: (RADEONDRIGetVersion)
	* src/radeon_driver.c: (RADEONGetAccessibleVRAM):
	* man/radeon_reg.h:
	* src/radeon_video.c:
	Fix various small cosmetic issues. Change a driver message, get the order
	right for requesting drm versions, replace the use of some numbers with
	the respective macro defines in radeon_video.c, and add some more macro
	defines. None of that really matters.

2006-03-17  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONGetAccessibleVRAM),
	(RADEONPreInitVRAM):
	Add missing return statement (the driver would not start randomly),
	add RV410 to the list of new generation cards for the memory map
	setup and fix a bogus message.

2006-03-16  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONInitCrtcRegisters),
	(RADEONInitCrtc2Registers), (RADEONDoAdjustFrame):
	Fix incorrect CRTC2_OFFSET values when using old-style dual head (not
	MergedFB). Fixes Xinerama for me.
